16-03-2015 Gabriele Bertoli <gbertoli@cern.ch>
	* Added support to read MiniTree
	* Added functions to plot histograms

14-03-2015 Gabriele Bertoli <gbertoli@cern.ch>
	* Added classes to read jets

13-03-2015 Gabriele Bertoli <gbertoli@cern.ch>
	* Creation of the package
	* Tagging MiniReader-00-00-01